layout bug fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,7 +32,9 @@ html {
   font-size: $font-size-base;
   font-weight: normal;
   height: 100%;
-  overflow: hidden;
+  overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow-wrap: break-word;
 }
 
 body {
@@ -82,11 +84,11 @@ a {
 /* Navigation card*/
 
 nav ul {
+  display: none;
   position: fixed;
   top: 40%;
   width: 6rem;
   height: 8.5rem;
-  display: block;
   background: $card-bg-color;
   border-radius: 1rem;
   text-align: center;
@@ -467,6 +469,7 @@ section {
   div {
     padding: 0.2rem;
     transition: opacity 0.5s;
+    overflow: hidden;
   }
 
   div[skill-type="display"] {
@@ -547,8 +550,10 @@ section {
 
   .hexagon {
     background: $primary-color;
-    height: 0.5rem;
+    height: 0.6rem;
     left: 0;
+    margin-top: -0.3rem;
+    //margin-bottom: 0.7rem;
     margin-left: auto;
     margin-right: auto;
     position: absolute;
@@ -581,6 +586,7 @@ section {
   .flag-wrapper {
     position: relative;
     text-align: center;
+    //overflow: hidden;
   }
 
   .flag {
@@ -615,24 +621,27 @@ section {
   }
 
   .title-wrapper {
-    color: $primary-color;
-    display: inline-block;
-    line-height: 0.5rem;
-    margin-top: 0.3rem;
+    //display: inline-block;
+    //line-height: 0.5rem;
+    //margin-top: 1rem;
+    //position: relative;
+    //overflow: hidden;
   }
   
   .timeline-title {
     //font-weight: $font-weight-strong;
+    color: $primary-color;
     font-family: $font-family-title;
     background: $bg-color;
     border-radius: 0.5rem;
     display: inline-block;
     padding: .6rem;
+    margin-top: 0;
   }
 
   .time-wrapper {
-    display: block;
-    line-height: 0.5rem;
+    //display: block;
+    //line-height: 0.5rem;
     margin-top: 0.3rem;
   }
 
@@ -642,13 +651,14 @@ section {
     border-radius: 0.5rem;
     display: inline-block;
     padding: .6rem;
+    margin-top: 0.3rem;
   }
 
   .desc {
     color: $text-color-light;
     background: $bg-color;
     border-radius: 1rem;
-    margin: 1em 0 0 0;
+    margin: 0.5em 0 0 0;
     padding: 0.75em;
     text-align: center;
   }
@@ -701,7 +711,7 @@ section {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
-  overflow: hidden;
+  overflow: ellipsis;
   margin: 0.5rem 0 0 0;
 }
 
@@ -917,6 +927,7 @@ section {
         left: auto;
         right: -1.6rem;
         top: 0.4rem;
+        margin-top: 0.7rem;
       }
 
       .flag-wrapper {
@@ -944,6 +955,7 @@ section {
         left: -1.6rem;
         right: auto;
         top: 0.4rem;
+        margin-top: 0.6rem;
       }
 
       .flag-wrapper {
@@ -1003,10 +1015,16 @@ section {
 
     .direction-l {
       width: 23.35rem;
+      .hexagon {
+        margin-top: 0.5rem;
+      }
     }
 
     .direction-r {
       width: 23.35rem;
+      .hexagon {
+        margin-top: 0.7rem;
+      }
     }
   }
 
@@ -1018,6 +1036,10 @@ section {
 }
 
 @media only screen and (min-width: $large-screen) {
+  nav ul {
+    display: block;
+  }
+
   .layout {
     padding: 5rem 5rem;
   }
@@ -1033,10 +1055,16 @@ section {
 
     .direction-l {
       width: 27.9rem;
+      .hexagon {
+        margin-top: 0.6rem;
+      }
     }
 
     .direction-r {
       width: 27.9rem;
+      .hexagon {
+        margin-top: 0.7rem;
+      }
     }
   }
 
